--- a/index.html
+++ b/index.html
@@ -1,31 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
+<meta charset="UTF-8">
 <title>Implementation Manager Deal Dashboard</title>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 
 <style>
 :root {
   --green:#85ad33; --dark-green:#618025;
-  --gold:#f2b001; --blue:#7bbaf0;
+  --gold:#f2b001; --red:#c0392b;
   --light:#f7f8f8; --text:#444;
 }
-
 * { box-sizing:border-box; font-family:Montserrat, Arial; }
 body { margin:0; background:var(--light); color:var(--text); }
+.container { max-width:1400px; margin:auto; padding:24px; }
 
-.container { max-width:1300px; margin:auto; padding:24px; }
-
-header {
-  display:flex; align-items:center; gap:16px;
-  margin-bottom:20px;
-}
+header { display:flex; gap:16px; align-items:center; }
 header img { height:42px; }
-header h1 { margin:0; color:var(--green); }
-header p { margin:4px 0 0; }
-
-.tabs { display:flex; gap:24px; border-bottom:2px solid #ddd; }
+h1 { margin:0; color:var(--green); }
+.tabs { display:flex; gap:24px; margin-top:16px; border-bottom:2px solid #ddd; }
 .tab { cursor:pointer; padding-bottom:10px; font-weight:600; }
 .tab.active { color:var(--green); border-bottom:4px solid var(--green); }
 
@@ -42,7 +35,12 @@ table { width:100%; border-collapse:collapse; background:white; border-radius:8p
 th, td { padding:10px; border-bottom:1px solid #eee; font-size:13px; }
 th { background:#e5f1d4; }
 
-select { width:100%; }
+select.adjustments {
+  width:100%;
+  border:none;
+  background:transparent;
+  font-size:13px;
+}
 
 .pill { padding:4px 8px; border-radius:10px; font-size:12px; font-weight:600; }
 .green { background:#dff0d8; }
@@ -50,16 +48,18 @@ select { width:100%; }
 .red { background:#f2dede; }
 
 .toggle { margin:12px 0; }
+button { cursor:pointer; }
 
 .im-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(260px,1fr)); gap:16px; }
+.list .card { display:flex; justify-content:space-between; align-items:center; }
 
 .progress { position:relative; height:8px; background:#eee; border-radius:4px; margin-top:8px; }
 .bar { height:100%; background:var(--green); }
-.marker { position:absolute; top:-4px; width:2px; height:16px; background:#999; }
+.marker { position:absolute; top:-4px; width:2px; height:16px; }
 .marker.yellow { left:70%; background:var(--gold); }
-.marker.red { left:90%; background:#c0392b; }
+.marker.red { left:90%; background:var(--red); }
 
-.note { margin-top:8px; width:100%; }
+.note { width:100%; margin-top:8px; }
 
 .subtabs { display:flex; gap:16px; margin:16px 0; }
 .subtab { cursor:pointer; font-weight:600; }
@@ -73,7 +73,7 @@ footer { text-align:center; margin-top:40px; font-size:12px; }
 <div class="container">
 
 <header>
-  <img src="logo.png" alt="ParentSquare Logo">
+  <img src="logo.png" alt="ParentSquare">
   <div>
     <h1>Implementation Manager Deal Dashboard</h1>
     <p>Workload Visibility & Deal Assignment Support</p>
@@ -87,66 +87,42 @@ footer { text-align:center; margin-top:40px; font-size:12px; }
 </div>
 
 <div class="summary">
-  <div class="card"><div class="value">14</div><div class="label">Active Deals</div></div>
-  <div class="card"><div class="value">67</div><div class="label">Total Points</div></div>
+  <div class="card"><div class="value" id="dealCount"></div><div class="label">Active Deals</div></div>
+  <div class="card"><div class="value" id="totalPoints"></div><div class="label">Total Points</div></div>
   <div class="card"><div class="value">74%</div><div class="label">Capacity Used</div></div>
-  <div class="card"><div class="value">5</div><div class="label">At-Risk Deals</div></div>
+  <div class="card"><div class="value" id="riskCount"></div><div class="label">At-Risk Deals</div></div>
 </div>
 
 <!-- My Book of Business -->
 <div id="im" class="view active">
 <h2>My Deals</h2>
-<table>
+<table id="dealTable">
 <thead>
 <tr>
-<th>Customer</th><th>Size</th><th>SIS</th><th>Health</th><th>Adjustments</th><th>Total Points</th>
+<th>Customer</th>
+<th>Stage</th>
+<th>Size</th>
+<th>SIS</th>
+<th>Health</th>
+<th>Adjustments</th>
+<th>Total Points</th>
 </tr>
 </thead>
-<tbody>
-<tr>
-<td>District A</td><td>Medium (3)</td><td>PowerSchool (3)</td><td><span class="pill yellow">Yellow (1)</span></td>
-<td>
-<select multiple>
-<option>Pilot (+1)</option><option>Extended Launch (+1)</option>
-<option>DPA (+1)</option><option>New Hire (+1)</option>
-</select>
-</td>
-<td>8</td>
-</tr>
-
-<!-- 10 additional examples -->
-<tr><td>Charter B</td><td>Large (2)</td><td>Infinite Campus (2)</td><td><span class="pill red">Red (2)</span></td><td><select multiple><option>Extended Launch</option></select></td><td>7</td></tr>
-<tr><td>District C</td><td>Small (1)</td><td>Alma (1)</td><td><span class="pill green">Green (0)</span></td><td><select multiple></select></td><td>2</td></tr>
-<tr><td>Network D</td><td>Strategic (4)</td><td>PowerSchool (3)</td><td><span class="pill yellow">Yellow (1)</span></td><td><select multiple><option>Pilot</option><option>DPA</option></select></td><td>9</td></tr>
-<tr><td>District E</td><td>Medium (3)</td><td>Skyward (2)</td><td><span class="pill green">Green (0)</span></td><td><select multiple></select></td><td>5</td></tr>
-<tr><td>Charter F</td><td>Small (1)</td><td>FACTS (1)</td><td><span class="pill red">Red (2)</span></td><td><select multiple><option>Extended Launch</option></select></td><td>5</td></tr>
-<tr><td>District G</td><td>Large (2)</td><td>Synergy (1)</td><td><span class="pill yellow">Yellow (1)</span></td><td><select multiple></select></td><td>4</td></tr>
-<tr><td>Network H</td><td>Medium (3)</td><td>Genesis (1)</td><td><span class="pill green">Green (0)</span></td><td><select multiple><option>Pilot</option></select></td><td>5</td></tr>
-<tr><td>District I</td><td>Strategic (4)</td><td>OneRoster (3)</td><td><span class="pill red">Red (2)</span></td><td><select multiple><option>DPA</option></select></td><td>9</td></tr>
-<tr><td>Charter J</td><td>Medium (3)</td><td>Aeries (2)</td><td><span class="pill yellow">Yellow (1)</span></td><td><select multiple></select></td><td>6</td></tr>
-</tbody>
+<tbody></tbody>
 </table>
 </div>
 
 <!-- Territory Overview -->
 <div id="territory" class="view">
 <h2>Territory Overview</h2>
-<div class="toggle">View: <button>Cards</button> <button>List</button></div>
-
-<div class="im-grid">
-<div class="card"><strong>Alex R.</strong><br>Tier T3<br>Points: 42
-<div class="progress"><div class="bar" style="width:65%"></div><div class="marker yellow"></div><div class="marker red"></div></div>
-<textarea class="note" placeholder="Notes..."></textarea></div>
-
-<div class="card"><strong>Jordan M.</strong><br>Tier T2<br>Points: 55
-<div class="progress"><div class="bar" style="width:85%"></div><div class="marker yellow"></div><div class="marker red"></div></div>
-<textarea class="note"></textarea></div>
-
-<!-- 5 more IMs -->
-<div class="card"><strong>Casey L.</strong><br>Tier T1<br>Points: 28<div class="progress"><div class="bar" style="width:40%"></div><div class="marker yellow"></div><div class="marker red"></div></div></div>
-<div class="card"><strong>Drew P.</strong><br>Tier T4<br>Points: 61<div class="progress"><div class="bar" style="width:90%"></div><div class="marker yellow"></div><div class="marker red"></div></div></div>
-<div class="card"><strong>Morgan S.</strong><br>Tier T3<br>Points: 47<div class="progress"><div class="bar" style="width:70%"></div><div class="marker yellow"></div><div class="marker red"></div></div></div>
+<div class="toggle">
+View:
+<button onclick="setLayout('territory','cards')">Cards</button>
+<button onclick="setLayout('territory','list')">List</button>
+Sort Tier:
+<button onclick="toggleTierSort()">Asc / Desc</button>
 </div>
+<div id="territoryIMs" class="im-grid"></div>
 </div>
 
 <!-- Total Team Workload -->
@@ -154,11 +130,32 @@ footer { text-align:center; margin-top:40px; font-size:12px; }
 <h2>Total Team Workload</h2>
 
 <div class="subtabs">
-<div class="subtab active">All IMs</div>
-<div class="subtab">Large / Enterprise / Strategic Review</div>
+  <div class="subtab active" onclick="showTeamSub('all')">All IMs</div>
+  <div class="subtab" onclick="showTeamSub('review')">Strategic Assignment Review</div>
 </div>
 
-<p>Includes all Territory IMs + additional sample IMs. Sortable by Tier and Alphabetical.</p>
+<div id="teamAll">
+<div class="toggle">
+View:
+<button onclick="setLayout('team','cards')">Cards</button>
+<button onclick="setLayout('team','list')">List</button>
+Sort Tier:
+<button onclick="toggleTierSort()">Asc / Desc</button>
+</div>
+<div id="teamIMs" class="im-grid"></div>
+</div>
+
+<div id="teamReview" style="display:none;">
+<table>
+<thead>
+<tr><th>Customer</th><th>Size</th><th>Suggested IM</th><th>Action</th></tr>
+</thead>
+<tbody>
+<tr><td>Metro District</td><td>Strategic</td><td>Alex R.</td><td><button>Approve</button> <button>Hold</button></td></tr>
+<tr><td>Unified Network</td><td>Enterprise</td><td>Drew P.</td><td><button>Approve</button> <button>Hold</button></td></tr>
+</tbody>
+</table>
+</div>
 
 </div>
 
@@ -167,13 +164,81 @@ footer { text-align:center; margin-top:40px; font-size:12px; }
 </div>
 
 <script>
-function showView(id){
-document.querySelectorAll('.view').forEach(v=>v.classList.remove('active'));
-document.querySelectorAll('.tab').forEach(t=>t.classList.remove('active'));
-document.getElementById(id).classList.add('active');
-event.target.classList.add('active');
-}
-</script>
+/* ---------- DEAL DATA ---------- */
+const stageOrder = ["Inbound","Kickoff","Setup","Feature Enablement","Platform Ready","Monitor","End of Implementation","On Hold","Stalled"];
 
+const deals = [
+{c:"District A",stage:"Inbound",size:["Medium",3],sis:["PowerSchool",3],health:["Yellow",1],adj:[]},
+{c:"Charter B",stage:"Kickoff",size:["Large",2],sis:["Infinite Campus",2],health:["Red",2],adj:["Extended Launch"]},
+{c:"District C",stage:"Setup",size:["Small",1],sis:["Alma",1],health:["Green",0],adj:[]},
+{c:"Network D",stage:"Feature Enablement",size:["Strategic",4],sis:["PowerSchool",3],health:["Yellow",1],adj:["Pilot","DPA"]},
+{c:"District E",stage:"Platform Ready",size:["Medium",3],sis:["Skyward",2],health:["Green",0],adj:[]},
+{c:"Charter F",stage:"Monitor",size:["Small",1],sis:["FACTS",1],health:["Red",2],adj:["Extended Launch"]},
+{c:"District G",stage:"End of Implementation",size:["Large",2],sis:["Synergy",1],health:["Yellow",1],adj:[]},
+{c:"Network H",stage:"On Hold",size:["Medium",3],sis:["Genesis",1],health:["Green",0],adj:["Pilot"]},
+{c:"District I",stage:"Stalled",size:["Strategic",4],sis:["OneRoster",3],health:["Red",2],adj:["DPA"]},
+{c:"Charter J",stage:"Setup",size:["Medium",3],sis:["Aeries",2],health:["Yellow",1],adj:[]}
+];
+
+const adjOptions = ["Pilot","Extended Launch","DPA","New Hire"];
+
+/* ---------- RENDER DEALS ---------- */
+function renderDeals(){
+const tbody = document.querySelector("#dealTable tbody");
+tbody.innerHTML="";
+let total=0, risk=0;
+
+deals.sort((a,b)=>stageOrder.indexOf(a.stage)-stageOrder.indexOf(b.stage));
+
+deals.forEach((d,i)=>{
+let adjPts=d.adj.length;
+let pts=d.size[1]+d.sis[1]+d.health[1]+adjPts;
+total+=pts;
+if(d.health[0]!=="Green") risk++;
+
+let tr=document.createElement("tr");
+tr.innerHTML=`
+<td>${d.c}</td>
+<td>${d.stage}</td>
+<td>${d.size[0]} (${d.size[1]})</td>
+<td>${d.sis[0]} (${d.sis[1]})</td>
+<td><span class="pill ${d.health[0].toLowerCase()}">${d.health[0]} (${d.health[1]})</span></td>
+<td>
+<select multiple class="adjustments" onchange="updateAdj(${i},this)">
+${adjOptions.map(o=>`<option ${d.adj.includes(o)?"selected":""}>${o}</option>`).join("")}
+</select>
+</td>
+<td>${pts}</td>`;
+tbody.appendChild(tr);
+});
+
+document.getElementById("dealCount").innerText=deals.length;
+document.getElementById("totalPoints").innerText=total;
+document.getElementById("riskCount").innerText=risk;
+}
+
+function updateAdj(i,el){
+deals[i].adj=[...el.selectedOptions].map(o=>o.value);
+renderDeals();
+}
+
+/* ---------- VIEW CONTROLS ---------- */
+function showView(id){
+document.querySelectorAll(".view").forEach(v=>v.classList.remove("active"));
+document.querySelectorAll(".tab").forEach(t=>t.classList.remove("active"));
+document.getElementById(id).classList.add("active");
+event.target.classList.add("active");
+}
+
+function showTeamSub(id){
+document.getElementById("teamAll").style.display=id==="all"?"block":"none";
+document.getElementById("teamReview").style.display=id==="review"?"block":"none";
+document.querySelectorAll(".subtab").forEach(s=>s.classList.remove("active"));
+event.target.classList.add("active");
+}
+
+/* initial render */
+renderDeals();
+</script>
 </body>
 </html>
