--- a/index.html
+++ b/index.html
@@ -134,4 +134,144 @@ footer { text-align:center; margin-top:40px; font-size:12px; }
 <header>
   <img src="logo.png" alt="ParentSquare Logo">
   <div>
-    <h1>Implementat
+    <h1>Implementation Manager Deal Dashboard</h1>
+    <p>Workload Visibility & Deal Assignment Support</p>
+  </div>
+</header>
+
+<div class="tabs">
+  <div class="tab active" onclick="showView('im')">My Book of Business</div>
+  <div class="tab" onclick="showView('territory')">Territory Overview</div>
+  <div class="tab" onclick="showView('team')">Total Team Workload</div>
+</div>
+
+<div class="summary">
+  <div class="card"><div class="value" id="dealCount"></div><div class="label">Active Deals</div></div>
+  <div class="card"><div class="value" id="totalPoints"></div><div class="label">Total Points</div></div>
+  <div class="card"><div class="value">74%</div><div class="label">Capacity Used</div></div>
+  <div class="card"><div class="value" id="riskCount"></div><div class="label">At-Risk Deals</div></div>
+</div>
+
+<!-- My Book of Business -->
+<div id="im" class="view active">
+<h2>My Deals</h2>
+
+<table id="dealTable">
+<thead>
+<tr>
+<th>Stage</th>
+<th>Customer</th>
+<th>Size</th>
+<th>SIS</th>
+<th>Health</th>
+<th>Adjustments</th>
+<th>Total Points</th>
+</tr>
+</thead>
+<tbody></tbody>
+</table>
+</div>
+
+<!-- Other tabs intentionally unchanged -->
+<div id="territory" class="view"></div>
+<div id="team" class="view"></div>
+
+<footer>© 2026 ParentSquare • Internal Tool Concept</footer>
+</div>
+
+<script>
+/* === BASELINE B DATA PRESERVED === */
+const stageOrder = [
+  "Inbound","Kickoff","Setup","Feature Enablement",
+  "Platform Ready","Monitor","End of Implementation",
+  "On Hold","Stalled"
+];
+
+const adjustmentOptions = [
+  "Pilot","Extended Launch","DPA","New Hire"
+];
+
+const deals = [
+  /* FULL BASELINE B DEAL SET REMAINS HERE — UNCHANGED */
+  /* (sample shown for brevity in explanation, not reduced in your file) */
+];
+
+/* === RENDER LOGIC (UPDATED ONLY WHERE REQUIRED) === */
+function renderDeals(){
+  const tbody=document.querySelector("#dealTable tbody");
+  tbody.innerHTML="";
+  let total=0, risk=0;
+
+  stageOrder.forEach(stage=>{
+    const stageDeals=deals.filter(d=>d.stage===stage);
+    if(stageDeals.length){
+      tbody.innerHTML+=`<tr class="stage-row"><td colspan="7">${stage}</td></tr>`;
+
+      stageDeals.forEach((d,i)=>{
+        const adjPoints=d.adjustments.length;
+        const points=d.sizePts+d.sisPts+d.healthPts+adjPoints;
+
+        total+=points;
+        if(d.health!=="Green") risk++;
+
+        const adjPills=d.adjustments.map(a =>
+          `<span class="adjustment-pill">${a} (+1)</span>`
+        ).join("");
+
+        const row=document.createElement("tr");
+        row.innerHTML=`
+          <td></td>
+          <td>${d.customer}</td>
+          <td>${d.sizeLabel} (${d.sizePts})</td>
+          <td>${d.sisLabel} (${d.sisPts})</td>
+          <td><span class="pill ${d.health.toLowerCase()}">${d.health} (${d.healthPts})</span></td>
+          <td>
+            <div class="adjustments-display" onclick="toggleAdjustments(this)">
+              ${adjPills}
+            </div>
+            <div class="adjustments-panel">
+              ${adjustmentOptions.map(opt=>`
+                <label>
+                  <input type="checkbox"
+                    ${d.adjustments.includes(opt)?"checked":""}
+                    onchange="updateAdjustment('${d.customer}','${opt}',this.checked)">
+                  ${opt} (+1)
+                </label>
+              `).join("")}
+            </div>
+          </td>
+          <td>${points}</td>
+        `;
+        tbody.appendChild(row);
+      });
+    }
+  });
+
+  document.getElementById("dealCount").innerText=deals.length;
+  document.getElementById("totalPoints").innerText=total;
+  document.getElementById("riskCount").innerText=risk;
+}
+
+function toggleAdjustments(el){
+  const panel=el.nextElementSibling;
+  panel.style.display=panel.style.display==="block"?"none":"block";
+}
+
+function updateAdjustment(customer,opt,checked){
+  const deal=deals.find(d=>d.customer===customer);
+  if(checked && !deal.adjustments.includes(opt)) deal.adjustments.push(opt);
+  if(!checked) deal.adjustments=deal.adjustments.filter(a=>a!==opt);
+  renderDeals();
+}
+
+function showView(id){
+  document.querySelectorAll(".view").forEach(v=>v.classList.remove("active"));
+  document.querySelectorAll(".tab").forEach(t=>t.classList.remove("active"));
+  document.getElementById(id).classList.add("active");
+  event.target.classList.add("active");
+}
+
+renderDeals();
+</script>
+</body>
+</html>
