Update footer to change name from Derek to Evan

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   </div>
 
   <footer>
-    © 2026 ParentSquare • Implementation Manager Dashboard • Derek McBride
+    © 2026 ParentSquare • Implementation Manager Dashboard • Evan Tambini
   </footer>
 </div>
 
